# algorithms-and-data-structures

./: .gitignore  CMakeLists.txt
Institute/lw1/: Makefile  task_23.cpp  task_26.cpp  task_28.cpp
Institute/lw2/: CQueue.cpp  CQueue.h  CStack.cpp  CStack.h  Makefile  task_18.cpp
Institute/lw3/: Makefile  task_24.cpp
Institute/lw4/: CGraph.cpp  CGraph.h  Makefile  task_25.cpp
Institute/lw5/: CMatrixManager.cpp  CMatrixManager.h  Makefile  task_21.cpp
iSpring/lw1/: task_26.cpp
lw1/BinarySearch/: BinarySearch.cpp  BinarySearch.sln  BinarySearch.vcxproj  input.txt
lw10/DFS/: DFS.cpp  DFS.vcxproj.filters  GraphModuleImplementation.cpp  OutputMatrix.txt
lw11/BFS/: BFS.vcxproj  BFS.vcxproj.filters  GraphModuleImplementation.cpp  GraphModuleInterface.h
lw12/ConnectedGraphComponents/: AdjMatr.txt  ConnectedGraphComponents.cpp  GraphModuleImplementation.cpp
lw13/TopologicalSort/: GraphModuleImplementation.cpp  ListEdg.txt  OutputMatrix.txt  TopologicalSort.cpp  TopologicalSort.vcxproj
lw2/Queue/: Queue.cpp  Queue.vcxproj  Queue.vcxproj.filters  QueueModuleImplementaion.cpp  QueueModuleInterface.h
lw3/Stack/: Stack.cpp  Stack.vcxproj
lw4/ArithmeticExpressions/: ArithmeticExpressions.cpp  ArithmeticExpressions.vcxproj  input.txt
lw5/FloydSort/: FloydSort.cpp  FloydSort.sln  FloydSort.vcxproj  FloydSort.vcxproj.filters  input.txt
lw6/TreeWalks/: TreeWalks.cpp  TreeWalks.sln
lw7/WorkWithBinaryTree/: BinaryTreeUnitImplementationcpp.cpp  WorkWithBinaryTree.cpp
lw9/Graph/: Graph.sln  Graph.vcxproj  ListEdg.txt  OutputMatrix.txt
(+73 files in other folders)
