cmake_minimum_required(VERSION 3.27)
project(algorithms_and_data_structures)

set(CMAKE_CXX_STANDARD 20)

add_executable(
        algorithms_and_data_structures
        Institute/lw1/task_23.cpp
        Institute/lw1/task_28.cpp

        Institute/lw2/CQueue.cpp
        Institute/lw2/CStack.cpp

        Institute/lw2/task_18.cpp
        Institute/lw3/task_24.cpp
        Institute/lw3/task_24.cpp

        Institute/lw4/task_25.cpp
        Institute/lw4/CGraph.cpp

        Institute/lw5/task_21.cpp
        Institute/lw5/CMatrixManager.cpp
)
